--- a/pom.xml
+++ b/pom.xml
@@ -45,14 +45,17 @@
         <!-- based stack -->
         <camel.version>3.20.1</camel.version>
         <osgi.version>7.0.0</osgi.version>
-        <karaf.version>4.4.2</karaf.version>
+        <karaf.version>4.4.3</karaf.version>
         <cxf.version>3.5.5</cxf.version>
+        <activemq.version>5.17.0</activemq.version>
 
         <jackson.version>2.14.0</jackson.version>
         <javax.activation>1.2.0</javax.activation>
         <javax.validation>1.1.0.Final</javax.validation>
         <jakarta.jaxrs.version>2.1.6</jakarta.jaxrs.version>
         <geronimo.jsonspec.version>1.2</geronimo.jsonspec.version>
+        <geronimo.jms.version>1.1.1</geronimo.jms.version>
+        <commons-validator.version>1.3.1_2</commons-validator.version>
 
         <!-- for tests purpose -->
         <slf4j.version>1.7.32</slf4j.version>
@@ -62,6 +65,8 @@
     </properties>
 
     <modules>
+        <module>esbcloud-specs</module>
+        <module>esbcloud-services</module>
         <module>esbcloud-features</module>
         <module>esbcloud-distribution</module>
     </modules>
