--- a/esbcloud-services/esbcloud-routes/pom.xml
+++ b/esbcloud-services/esbcloud-routes/pom.xml
@@ -31,6 +31,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.yupiik.esbcloud</groupId>
+            <artifactId>esbcloud-specs</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jackson</artifactId>
             <version>${camel.version}</version>
@@ -80,16 +86,18 @@
                 <configuration>
                     <instructions>
                         <Export-Package>
-                            io.yupiik.esb.services.routes
+                            io.yupiik.esb.routes
                         </Export-Package>
                         <Import-Package>
                             io.yupiik.esb.api.jaxrs,
                             io.yupiik.esb.api.jaxrs.model,
+                            io.yupiik.esb.api.jms,
+                            io.yupiik.esb.api.kafka,
                             javax.jms;version="[1,3)",
                             *
                         </Import-Package>
                         <Private-Package>
-                            io.yupiik.esb.services.routes
+                            io.yupiik.esb.routes*
                         </Private-Package>
                         <_dsannotations-options>norequirements</_dsannotations-options>
                     </instructions>
