--- a/esbcloud-services/esbcloud-routes/pom.xml
+++ b/esbcloud-services/esbcloud-routes/pom.xml
@@ -43,6 +43,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-kafka</artifactId>
+            <version>${camel.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jms_1.1_spec</artifactId>
             <version>${geronimo.jms.version}</version>
@@ -74,6 +80,12 @@
             <version>${activemq.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>kafka</artifactId>
+            <version>1.17.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -94,6 +106,7 @@
                             io.yupiik.esb.api.jms,
                             io.yupiik.esb.api.kafka,
                             javax.jms;version="[1,3)",
+                            org.apache.kafka.common.security.scram,
                             *
                         </Import-Package>
                         <Private-Package>
