--- a/pom.xml
+++ b/pom.xml
@@ -288,7 +288,7 @@ under the License.
             </build>
         </profile>
         <profile>
-            <id>e2e-on-acceptance</id>
+            <id>e2e-on-dev</id>
             <build>
                 <plugins>
                     <plugin>
@@ -300,7 +300,7 @@ under the License.
                                 <exclude>**/JustHereToOverrideDefaultExclude.java</exclude>
                             </excludes>
                             <includes>
-                                <include>e2e/acceptance/*Test.java</include>
+                                <include>e2e/dev/*Test.java</include>
                             </includes>
                         </configuration>
                     </plugin>
