--- a/esbcloud-distribution/src/main/resources/etc/io.yupiik.esb.services.observability.camelcontext.cfg
+++ b/esbcloud-distribution/src/main/resources/etc/io.yupiik.esb.services.observability.camelcontext.cfg
@@ -1,4 +1,4 @@
 # API published healthcheck
-esbcloud.observability.healthcheck.host=$[env:ESBCLOUD_ENDPOINT_HOST;default=localhost]
-esbcloud.observability.healthcheck.port=$[env:ESBCLOUD_ENDPOINT_PORT;default=8888]
-esbcloud.observability.healthcheck.protocol=$[env:ESBCLOUD_ENDPOINT_PROTOCOL;default=http]
+esbcloud.observability.healthcheck.host=$[env:ESBCLOUD_HEALTH_ENDPOINT_HOST;default=localhost]
+esbcloud.observability.healthcheck.port=$[env:ESBCLOUD_HEALTH_ENDPOINT_PORT;default=8888]
+esbcloud.observability.healthcheck.protocol=$[env:ESBCLOUD_ENDPOINT_HEALTH_PROTOCOL;default=http]
