--- a/esbcloud-distribution/src/main/resources/etc/org.ops4j.connectionfactory-esb.cfg
+++ b/esbcloud-distribution/src/main/resources/etc/org.ops4j.connectionfactory-esb.cfg
@@ -2,6 +2,6 @@ name=gru
 osgi.jndi.service.name=jms/esb
 pool=pooledjms
 type=activemq
-url=$[env:ESB_AMQ_URL;default=tcp://localhost:61616]
-user==$[env:ESB_AMQ_USER;default=admin]
-password==$[env:ESB_AMQ_PWD;default=admin]
+url=$[env:ESBCLOUD_AMQ_URL;default=tcp://localhost:61616]
+user==$[env:ESBCLOUD_AMQ_USER;default=admin]
+password==$[env:ESBCLOUD_AMQ_PWD;default=admin]
