--- a/esbcloud-distribution/src/main/resources/etc/io.yupiik.esb.services.endpoint.camelcontext.cfg
+++ b/esbcloud-distribution/src/main/resources/etc/io.yupiik.esb.services.endpoint.camelcontext.cfg
@@ -1,10 +1,10 @@
 # API published entrypoint
 esbcloud.endpoint.host=$[env:ESBCLOUD_ENDPOINT_HOST;default=localhost]
-esbcloud.endpoint.port=$[env:ESBCLOUD_ENDPOINT_PORT;default=8443]
-esbcloud.endpoint.protocol=$[env:ESBCLOUD_ENDPOINT_PROTOCOL;default=https]
+esbcloud.endpoint.port=$[env:ESBCLOUD_ENDPOINT_PORT;default=8080]
+esbcloud.endpoint.protocol=$[env:ESBCLOUD_ENDPOINT_PROTOCOL;default=http]
 esbcloud.endpoint.cxf.trace.active=$[env:ESBCLOUD_ENDPOINT_CXF_TRACE_ACTIVE;default=false]
 esbcloud.endpoint.ssl.keystore=$[env:ESBCLOUD_ENDPOINT_SSL_KEYSTORE;default=./etc/ssl/keystore.jks]
-esbcloud.endpoint.ssl.password=$[env:ESBCLOUD_ENDPOINT_SSL_KEYSTORE;default=changeme]
+esbcloud.endpoint.ssl.password=$[env:ESBCLOUD_ENDPOINT_SSL_PASSWORD;default=changeme]
 
 # Camel thread pool profile
 esbcloud.endpoint.context.thread.min=$[env:ESBCLOUD_ENDPOINT_CONTEXT_THREAD_MIN;default=16]
