[distribution] update jms connection factory name

--- a/esbcloud-distribution/src/main/resources/etc/org.ops4j.connectionfactory-esb.cfg
+++ b/esbcloud-distribution/src/main/resources/etc/org.ops4j.connectionfactory-esb.cfg
@@ -1,7 +1,12 @@
-name=gru
+# factory name
+name=esb
+# jndi name to filter the osgi component
 osgi.jndi.service.name=jms/esb
+# type of pool
 pool=pooledjms
+# type of broker
 type=activemq
+
 url=$[env:ESBCLOUD_AMQ_URL;default=tcp://localhost:61616]
 user==$[env:ESBCLOUD_AMQ_USER;default=admin]
 password==$[env:ESBCLOUD_AMQ_PWD;default=admin]
