--- a/esbcloud-distribution/src/main/resources/etc/org.ops4j.pax.logging.cfg
+++ b/esbcloud-distribution/src/main/resources/etc/org.ops4j.pax.logging.cfg
@@ -62,15 +62,24 @@ log4j2.logger.audit.appenderRef.AuditRollingFile.ref = AuditRollingFile
 # Console appender not used by default (see log4j2.rootLogger.appenderRefs)
 log4j2.appender.console.type = Console
 log4j2.appender.console.name = Console
-log4j2.appender.console.layout.type = PatternLayout
-log4j2.appender.console.layout.pattern = ${env:LOG4J2_LOGGING_PATTERN_CONSOLE}
-log4j2.appender.console.layout.alwaysWriteExceptions = false
+log4j2.appender.console.layout.type=JsonLayout
+log4j2.appender.console.layout.compact=true
+log4j2.appender.console.layout.eventEol=true
+log4j2.appender.console.layout.includeStacktrace=true
+log4j2.appender.console.layout.stacktraceAsString=true
+log4j2.appender.console.layout.objectMessageAsJsonObject=true
+# log4j2.appender.console.layout.type = PatternLayout
+# log4j2.appender.console.layout.pattern = ${env:LOG4J2_LOGGING_PATTERN_CONSOLE}
+# log4j2.appender.console.layout.alwaysWriteExceptions = false
 
 log4j2.appender.console2.type = Console
 log4j2.appender.console2.name = Console2
-log4j2.appender.console2.layout.type = PatternLayout
-log4j2.appender.console2.layout.pattern = ${log4j2.out.pattern}
-log4j2.appender.console2.layout.alwaysWriteExceptions = false
+log4j2.appender.console2.layout.type=JsonLayout
+log4j2.appender.console2.layout.compact=true
+log4j2.appender.console2.layout.eventEol=true
+log4j2.appender.console2.layout.includeStacktrace=true
+log4j2.appender.console2.layout.stacktraceAsString=true
+log4j2.appender.console2.layout.objectMessageAsJsonObject=true
 
 # Rolling file appender
 log4j2.appender.rolling.type = RollingRandomAccessFile
